# mmap-snapshot

./: Cargo.toml  README.md
src/: lib.rs
