[package]
name = "atommap"
description = "Safe and atomic mmap"
version = "0.1.0"
edition = "2024"
authors = ["Alex Sayers <alex@asayers.com>"]
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/asayers/atommap"

[dependencies]
rustix = { version = "1.1.4", features = ["fs", "mm"] }
